--- a/BilgeAdam.UI.Web/Views/Product/Index.cshtml
+++ b/BilgeAdam.UI.Web/Views/Product/Index.cshtml
@@ -41,7 +41,7 @@
                             <td>@item.KategoriAd</td>
                             <td>@item.Fiyat</td>
                             <td>@item.EklenmeTarih</td>
-                            <td onclick="Delete(@item.ID)">Sil</td>
+                            <td onclick="Delete(@item.ID)"><i class="fa fa-trash" aria-hidden="true"></i></td>
                         </tr>
                     }
 
