--- a/BilgeAdam.UI.Web/Views/Product/Index.cshtml
+++ b/BilgeAdam.UI.Web/Views/Product/Index.cshtml
@@ -23,6 +23,7 @@
                         <th>Fiyat</th>
                         <th>Eklenme Tarihi</th>
                         <th>İşlem</th>
+                        <th>İşlem</th>
                     </tr>
                 </thead>
                 <tfoot>
@@ -42,12 +43,34 @@
                             <td>@item.Fiyat</td>
                             <td>@item.EklenmeTarih</td>
                             <td onclick="Delete(@item.ID)"><i class="fa fa-trash" aria-hidden="true"></i></td>
+                            <td><i class="fa fa-edit" aria-hidden="true" data-toggle="modal" data-target="#myModal" data-id="@item.ID"></i></td>
                         </tr>
                     }
 
                 </tbody>
             </table>
         </div>
+    </div>
+</div>
+
+<!-- Modal -->
+<div id="myModal" class="modal fade" role="dialog">
+    <div class="modal-dialog">
+
+        <!-- Modal content-->
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <h4 class="modal-title">Modal Header</h4>
+            </div>
+            <div class="modal-body">
+                <p>Some text in the modal.</p>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            </div>
+        </div>
+
     </div>
 </div>
 
@@ -59,20 +82,61 @@
 
 <!-- Page level custom scripts -->
 <script src="/Content/js/demo/datatables-demo.js"></script>
+<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+
 
 <script>
+    $(document).on("click", ".fa-edit", function () {
+        var id = $(this).data('id');
+
+        $(".modal-body p").text(id);
+    });
+</script>
+
+<script>
+
+
+
+
     function Delete(id) {
 
-        $.ajax({
-            url: "/Product/DeleteProduct/" + id,
-            type: "POST",
-            success: function () {
-                $("#" + id).fadeOut();
-            },
-            error: function () {
-                alert("Hata meydana geldi")
-            }
+        swal({
+            title: "Ürünü silmek istediğinize emin misiniz?",
+            text: "silinen ürün geri gelmez!!",
+            icon: "warning",
+            buttons: true,
+            dangerMode: true,
         })
+            .then((willDelete) => {
+                if (willDelete) {
+
+                    //db den silme işlemi yapılır
+                    $.ajax({
+                        url: "/Product/DeleteProduct/" + id,
+                        type: "POST",
+                        success: function () {
+                            $("#" + id).fadeOut();
+                        },
+                        error: function () {
+                            alert("Hata meydana geldi")
+                        }
+                    })
+
+
+                    swal("Ürün başarıyla silindi!", {
+                        icon: "success",
+                    });
+
+
+                } else {
+                    swal("Silme işlemi iptal edildi!");
+                }
+            });
+
+
+
+
+
 
     }
 </script>
