--- a/BilgeAdam.UI.Web/Views/Product/Index.cshtml
+++ b/BilgeAdam.UI.Web/Views/Product/Index.cshtml
@@ -86,6 +86,9 @@
 <script src="/Content/js/demo/datatables-demo.js"></script>
 <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 
+<script src="/Scripts/jquery.signalR-2.4.1.min.js"></script>
+<script src="~/signalr/hubs"></script>
+
 
 <script>
     $(document).on("click", ".fa-edit", function () {
@@ -96,8 +99,11 @@
 </script>
 
 <script>
+    var notification = $.connection.notificationHub;
 
-
+    notification.client.productalarm = function (id) {
+        alert(id + " numaralı ürün silindi!!")
+    };
 
 
     function Delete(id) {
@@ -123,6 +129,15 @@
                             alert("Hata meydana geldi")
                         }
                     })
+
+                    //ürün db den silindi!
+
+                    $.connection.hub.start().done(function () {
+
+                        notification.server.deleteproductalarm(id);
+                    });
+                     
+
 
 
                     swal("Ürün başarıyla silindi!", {
