--- a/BilgeAdam.UI.Web/Views/Supplier/Index.cshtml
+++ b/BilgeAdam.UI.Web/Views/Supplier/Index.cshtml
@@ -9,15 +9,20 @@
         <title>Bootstrap Example</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link href="/Content/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+
     </head>
     <body>
 
         <div class="container">
             <h2>Tedarikçiler</h2>
             <p>Aşağıdakiler tedarikçiler</p>
+
+            <button class="btn btn-success" id="btngetsuppliers">Tedarikci JSON YAZ</button>
+
             <table class="table table-hover">
                 <thead>
                     <tr>
@@ -31,13 +36,16 @@
                 <tbody>
                     @foreach (var item in Model)
                     {
-                        <tr>
-                            <td>@item.ID</td>
-                            <td>@item.SirketAd</td>
-                            <td>@item.Aciklama</td>
-                            <td>@item.AddDate</td>
-                            <td><a href="/Supplier/DeleteSupplier/@item.ID">Sil</a></td>
-                        </tr>
+                    <tr id="@item.ID">
+                        <td>@item.ID</td>
+                        <td>@item.SirketAd</td>
+                        <td>@item.Aciklama</td>
+                        <td>@item.AddDate</td>
+                        <td><i class="fa fa-trash" style="cursor:pointer" onclick="Delete(@item.ID)"></i></td>
+                        <td><i class="fa fa-camera" style="cursor:pointer"></i></td>
+                        @*<td><a href="/Supplier/DeleteSupplier/@item.ID">Sil</a></td>*@
+
+                    </tr>
                     }
 
                 </tbody>
@@ -46,3 +54,36 @@
 
     </body>
 </html>
+<script>
+    function Delete(id) {
+        $.ajax({
+            url: "/Supplier/RemoveSupplier/" + id,
+            success: function (result) {
+                alert(result);
+                $("#" + id).fadeOut();
+            }
+
+        })
+    }
+
+</script>
+<script>
+    $("#btngetsuppliers").click(function () {
+        //$.getJSON("http://northwind.servicestack.net/customers.json", function (data) {
+        //    console.log(data)
+        //})
+        // $.getJSON("/supplier/GetAllSuppliers", function (data) {
+        //    console.log(data)
+        //})
+
+
+        $.ajax({
+            url: "/Supplier/GetAllSuppliers/",
+            type: "GET",
+            success: function (data) {
+                console.log(data);
+            }
+        })
+
+    })
+</script>
